fixed line spacing

--- a/site/static/base.css
+++ b/site/static/base.css
@@ -7,7 +7,6 @@
 
 * {
     font-family: Montserrat, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
 }
 
 body {
